# deepbook-v3-rs

./: .gitignore  Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs
src/examples/: create_and_share_blance_manager.rs
src/transactions/: balance_manager.rs  deepbook.rs  deepbook_admin.rs  flash_loans.rs  governance.rs  mod.rs
src/types/: index.rs
src/utils/: config.rs  constants.rs
