[package]
name = "deepbook-v3-rs"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = true

[[example]]
name = "create_and_share_blance_manager"
path = "src/examples/create_and_share_blance_manager.rs"

[dependencies]
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types" }
move-core-types = { git = "https://github.com/mystenlabs/sui", package = "move-core-types" }
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
